--- a/src/configs/overall.yaml
+++ b/src/configs/overall.yaml
@@ -1,7 +1,7 @@
 # general
 gpu_id: 0
 use_gpu: True
-seed: [111, 222, 333, 444, 555, 666, 777, 888, 999, 1111,]
+seed: [22, 33, 44, 55, 66, 77, 88, 99]
 
 # multi-modal raw features
 data_path: '../data/'
